# book-generation-engine

./: .claudeignore  .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile.worker  LOGIC_CENTRALIZATION_AUDIT.md  Makefile  README.md  REDUNDANT_LOGIC_MANIFEST.md  REVIEW_SUMMARY_2026-04-24.md  VERIFICATION_FILES.md  bug-log.md  docker-compose.yml  idea.md  pyproject.toml
.claude/: CLAUDE.md  project-config.md
.github/workflows/: ci.yml
.spec/book-generation-engine/: design.md  requirements.md  tasks.md
app/: config.py  main.py
app/api/: admin.py  batch.py  chapters.py  config.py  cover.py  deps.py  jobs.py  templates.py
app/core/: logging.py
app/domain/: constants.py  state_machine.py  validation_schemas.py
app/infrastructure/: http_exceptions.py  security.py  supabase_client.py
app/models/: chapter.py  job.py
app/queue/: connection.py  publisher.py
app/services/: cache_service.py  chapter_service.py  cover_revision_service.py  email_service.py  job_creation_service.py  job_service.py  progress.py  query_optimization.py  storage_service.py  token_tracker.py
app/ws/: manager.py
cli/: main.py
docs/: ARCHITECTURE_10_10_SUMMARY.md  CODE_REVIEW_REPORT_2026-04-24.md
docs/architecture/: ADR-001-caching-strategy.md  ADR-002-query-optimization-patterns.md
docs/specs/: 2026-04-17-book-generation-engine-design.md
frontend/: jest.config.js  package-lock.json  package.json
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  (+6 more)
scripts/: generate_schema.py  validate_schema.sh
worker/: dlq.py  main.py  recovery.py
(+142 files in other folders)
