[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "book-generation-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aio-pika>=9.4.0",
    "supabase>=2.5.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "anthropic>=0.30.0",
    "openai>=1.35.0",
    "google-generativeai>=0.7.0",
    "httpx>=0.27.0",
    "ebooklib>=0.18",
    "reportlab>=4.2.0",
    "python-dotenv>=1.0.0",
    "aiosmtplib>=3.0.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "pytest-timeout>=2.3.0",
]

[tool.setuptools]
packages = ["app", "worker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
